# LVD

./: .gitignore  LICENSE  README.md  environment_cpu.yaml  environment_gpu.yaml  pyproject.toml
config/: debug.yaml  ttbar.yaml  ttbar_final.yaml  ttbar_small.yaml  ttbar_small_base.yaml  ttbar_small_continue.yaml  ttbar_small_pretrain.yaml  ttbar_smaller.yaml  zjets.small.base.yaml  zjets.small.main.yaml
notebooks/: Evaluation.ipynb
src/: testing.py  train.py
src/config/: default.yaml  ttbar.yaml  ttbar_final_base.yaml  ttbar_final_pretrain.yaml  ttbar_larger.yaml  zjets.debug.yaml  zjets.medium.base.yaml  zjets.medium.finetune.yaml  zjets.medium.main.yaml  zjets.small.base.yaml
src/lvd/: checkpointer.py  consistency.py  dataset.py  losses.py  utils.py
src/lvd/config/: __init__.py  config.py  dataset_config.py  network_config.py  noise_schedule_config.py  training_config.py
src/lvd/layers/: __init__.py  attention_block.py  context_vector.py  embedding.py  expansion_linear.py  linear_block.py  noise_scheduler.py  positional_encoding.py  skip_connection.py  split_context_vector.py  timestep_embedding.py  transformer_block.py  uncoditional.py
src/lvd/models/: __init__.py  cvae.py  lvd.py  normalized.py
src/lvd/networks/: __init__.py  denoising_network.py  detector_encoder.py  multiplicity_predictor.py  particle_decoder.py  particle_encoder.py
src/lvd/noise_schedules/: __init__.py  conditional_network_schedule.py  dense_monotone.py  gamma_limits.py  network_schedule.py  noise_schedule.py  weighting.py
src/lvd/trainers/: cvae.py  lvd.py  trainer.py
